# actix-web-test

./: Cargo.toml  Dockerfile  filebeat.sh  filebeat.yml
client/: main.go
src/: api.rs  main.rs
