[package]
name = "actix-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
actix-web = "4.3"
actix-web-httpauth = "0.8"
anyhow = "1.0"
dotenv_config = "0.1"
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
regex = "1.7"
regex-syntax = "0.6"
axum = "0.6.16"