[package]
name = "actix-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6"
actix-web = "4.3"
actix-web-httpauth = "0.8"
anyhow = "1.0"
dotenv_config = "0.1"
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
regex = "1.7"
regex-syntax = "0.6"
axum = { version = "0.6.16", features = ["headers"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4", features = ["trace"] }
